--- a/tpl/home.html
+++ b/tpl/home.html
@@ -1,4 +1,6 @@
 
-<div ng-click="jump1()" style="height: 500px;width: 100%;" >
-<h2 class="h2">欢迎来到订吧</h2>
-<img src="img/app.png" class="img1"/></div>
+<div ng-click="jump1()" class="ho-div" >
+<h2 >欢迎来到订吧</h2>
+<img src="img/app.png" class="img1"/>
+<img src="img/can.png"  />
+</div>
