--- a/tpl/yoself.html
+++ b/tpl/yoself.html
@@ -1,14 +1,20 @@
 <div class="container">
-		<img src="img/111.jpg" style="border-radius:50%" width="15%" height="15%">&nbsp&nbsp
-		 <span class="glyphicon glyphicon-user"> 用户名：</span><span>小明</span>
+		<div style="margin-bottom: 5%;">
+			<img src="img/111.jpg" style="border-radius:50%" width="15%" height="15%">&nbsp&nbsp
+			 <span class="glyphicon glyphicon-user"> 用户名：</span><span>小明</span>
+		</div>
+		 <br />
+		 <hr />
 		 <div class="ye-div">
 		 <p > 我的订单：<a href="">全部订单&nbsp></a></p>
-		 <p><span class=" glyphicon glyphicon-credit-card">&nbsp代付款</span><span class="glyphicon glyphicon-saved">&nbsp待确认</span ><span class="glyphicon glyphicon-pencil">&nbsp待评价</span><span class="glyphicon glyphicon-refresh">&nbsp售后</span></p>
+		 <p><span class=" glyphicon glyphicon-usd">&nbsp代付款</span><span class="glyphicon glyphicon-saved">&nbsp待确认</span ><span class="glyphicon glyphicon-pencil">&nbsp待评价</span><span class="glyphicon glyphicon-refresh">&nbsp售后</span></p>
 		</div>
-		 <ul>
-		 	<li></li>
-		 	<li></li>
-		 	<li></li>
-		 	<li></li>
-		 </ul>
+		<div style="margin-top: 10%;">
+		<p><span class="glyphicon glyphicon-barcode">&nbsp抵用券</span></p>
+		<p><span class="glyphicon glyphicon-credit-card">&nbsp会员卡</span></p>
+		</div>
+		<div style="margin-top: 20%;">
+		<p><span class="glyphicon glyphicon-earphone">&nbsp联系客服</span></p>
+		<p><span class="glyphicon glyphicon-search">&nbsp关于我们</span></p>
+		</div>
 </div>
